--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 :root{
     --Moderateviolet: hsl(263, 55%, 52%);
@@ -17,18 +21,18 @@ body{
     font-size: 13px;
     min-width: 100vh;
     display: flex;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    
 }
 
-.container{
-        margin: 0 auto;
-}
+
 
 .text-grid{
-    display: grid;
-    gap: 20px;
     
-    grid-template-columns: 1fr ;
-    grid-template-rows: 1fr ;
+    display: grid;
+    
+    gap: 20px;
+    grid-template-columns: auto ;
     grid-template-areas: 
     "one"
     "two"
@@ -37,11 +41,45 @@ body{
     "five";
 }
 
+.container{
+    padding: 30px;
+}
+
 .box{
     border-radius: 7px;
-    padding: 20px;
+    padding: 2rem;
+    justify-content: center;
+    margin: .5rem .5rem .5rem 1.5rem;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    color: var(--White);
+    min-width: 400px;
+    
+    
 }
+.box p{
+    color: var(--op70);
+    
+}
+.box h2{
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
+.textbox3 h2{
+    color: var(--Verydarkgrayishblue);
+}
+.textbox5 h2{
+    color: var(--Verydarkgrayishblue);
+}
+.textbox3  p{
+    color: var(--Verydarkgrayishblue);
+}
+
+.textbox5 p{
+    color: var(--Verydarkgrayishblue);
+}
+
+
 
 .textbox1{
     grid-area: one;
@@ -61,7 +99,7 @@ body{
 .flex-data{
     display: flex;
     gap: 20px;
-    line-height: .5;
+    line-height: 1.5;
     color: var(--White);
     
 }
@@ -71,11 +109,11 @@ body{
     border: 2px solid var(--White);
 }
 
+
 .textbox1{
     background-image: url(./images/bg-pattern-quotation.svg);
     background-repeat: no-repeat;
     background-position: right 20px top  ;
-    
     background-color: var(--Moderateviolet);
 }
 .textbox2{
@@ -96,11 +134,38 @@ body{
 
   @media only screen and (min-width: 800px) {
     .text-grid{
-       
+        /* max-width:max-content; */
+        gap: 20px;
         grid-template-columns: repeat(4,1fr) ;
-        grid-template-rows: 1fr 1fr ;
+       
         grid-template-areas: 
         "one one two  five "
         "three four four five";
+    }
+    .box{
+        border-radius: 7px;
+        padding: 2rem;
+        justify-content: center;
+        margin: .5rem .5rem .5rem 1.5rem;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        color: var(--White);
+        width: auto;
+        min-width: auto;
+        
+        
+    }
+
+
+    
+ 
+    .text-grid{
+        margin: 5rem;
+    }
+
+    .textbox1{
+       
+        background-position: right 20% top  ;
+        
+        
     }
   }
